--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -24,5 +24,10 @@
         </div>
       </div>
     </div>
+    <div class="card">
+	<div class="item item-text-wrap">
+		This is a basic Card which used for testing.
+	</div>
+    </div>
   </ion-content>
 </ion-view>
